Made changes to the CSS for aligning the navbar to the top of the screen to fix overlapping sections on the page.

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,10 @@
 /* Font Styles */
 
 /* Navbar Styles */
+html {
+  scroll-padding-top: 70px;
+}
+
 nav {
   height: 70px;
 }
@@ -63,11 +67,6 @@ nav {
     transform: none !important;
     width: 100%;
   }
-}
-
-.nav-offset {
-  padding-top: 70px;
-  margin-top: -70px;
 }
 
 /* Landing Styles */
